feat: добавил форму для создания комментария

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,5 +1,13 @@
+@import './reset';
+@import './variables';
+
 *,
 *::before,
 *:after {
     box-sizing: border-box;
+}
+
+body {
+    font: 400 normal 18px/1.2 $default-font;
+    color: $black;
 }
