--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,1 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+
+$default-font: 'Inter', sans-serif;
+
+$black: #000;
 $bg-block: #D9D9D9;
