--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -85,7 +85,7 @@ video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	text-rendering: optimizeLegibility; 
+	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	text-size-adjust: none;
 }
@@ -140,4 +140,5 @@ button,
 input {
 	font: inherit;
 	outline: none;
+	border: none;
 }
