--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,5 +3,7 @@
 $default-font: 'Inter', sans-serif;
 
 $black: #000;
-$blue: #122AC0;
-$bg-block: #D9D9D9;
+$blue: #122ac0;
+$bg-block: #d9d9d9;
+$red: #ff0000;
+$green: #8ac540;
