--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -1,16 +1,68 @@
-.select {
-	max-width: max-content;
-	margin-left: 55px;
-	font-size: 16px;
-	opacity: 0.4;
-	// text-decoration: underline;
-	border-bottom: 1px solid #000;
+@import '@/assets/styles/variables';
 
-	appearance: none;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	-o-appearance: none;
-	&::-ms-expand {
-		display: none;
+.select {
+	margin-left: 55px;
+	position: relative;
+	> div {
+		display: flex;
+		align-items: center;
+		padding-bottom: 15px;
+
+		> img {
+			animation: rotate-second-half 0.4s ease-in-out;
+			width: 16px;
+			height: 12px;
+			border-radius: 0;
+			margin-left: 10px;
+			margin-top: 5px;
+			cursor: pointer;
+
+			&.active {
+				animation: rotate-first-half 0.4s ease-in-out;
+				animation-fill-mode: both;
+			}
+		}
+	}
+
+	> ul {
+		width: max-content;
+		padding: 10px 30px;
+		background-color: $white;
+		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+		border-radius: 5px;
+
+		position: absolute;
+		top: 100%;
+		left: 0;
+		z-index: 1;
+
+		> li {
+			> a {
+				font-size: 16px;
+				color: inherit;
+				opacity: 0.4;
+				text-decoration: none;
+			}
+		}
+	}
+}
+
+@keyframes rotate-first-half {
+	from {
+		transform: rotate(0);
+	}
+
+	to {
+		transform: rotate(180deg);
+	}
+}
+
+@keyframes rotate-second-half {
+	from {
+		transform: rotate(180deg);
+	}
+
+	to {
+		transform: rotate(360deg);
 	}
 }
