--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -53,7 +53,6 @@
 		}
 
 		> li {
-			padding: 5px 0;
 			transition: background-color 0.2s ease;
 			position: relative;
 
@@ -73,7 +72,7 @@
 				display: inline-flex;
 				align-items: center;
 				width: 100%;
-				padding-right: 31px;
+				padding: 5px 31px 5px 0;
 
 				font-size: 16px;
 				color: rgba($black, 0.4);
