--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -17,3 +17,11 @@ img {
 	height: 61px;
 	border-radius: 50%;
 }
+
+.no_internet_connection {
+	display: block;
+	margin: 30px 0;
+	text-align: center;
+	font-size: 25px;
+	color: $red;
+}
