--- a/src/components/layout/comment/comment-form/commentForm.module.scss
+++ b/src/components/layout/comment/comment-form/commentForm.module.scss
@@ -44,15 +44,31 @@
 	align-items: baseline;
 	margin-bottom: 32px;
 
-	> div:first-child {
+	> button:first-child {
 		font-weight: 500;
-		border-bottom: 3px solid $black;
+		color: rgba($black, 0.4);
 		padding-bottom: 5px;
+		background-color: transparent;
+		transition: all 0.2s ease;
 
 		> span {
-			margin-left: 13px;
+			margin-left: 10px;
 			font-size: 20px;
-			opacity: 0.4;
+			color: rgba($black, 0.4);
+			transition: color 0.2s ease;
+		}
+
+		&.active {
+			border-bottom: 2px solid $black;
+			color: rgba($black, 1);
+		}
+
+		&:hover:not(&.active) {
+			color: rgba($black, 0.7);
+
+			> span {
+				color: rgba($black, 0.7);
+			}
 		}
 	}
 }
