--- a/src/components/ui/field/field.module.scss
+++ b/src/components/ui/field/field.module.scss
@@ -5,7 +5,8 @@
 	max-width: 688px;
 	padding: 20px 30px;
 	resize: vertical;
-	min-height: 60px;
+	height: 65px;
+	min-height: 65px;
 	max-height: 400px;
 
 	border: none;
