--- a/src/components/layout/comment/comment-item/commentItems.module.scss
+++ b/src/components/layout/comment/comment-item/commentItems.module.scss
@@ -1,6 +1,10 @@
 @import '@/assets/styles/variables';
 
 .comments_wrapper {
+	> div:last-child {
+		margin-bottom: 0;
+	}
+
 	> div {
 		position: relative;
 		padding-left: 91px;
@@ -29,9 +33,24 @@
 						cursor: pointer;
 					}
 
+					> div {
+						display: flex;
+						align-items: center;
+						margin-right: 15px;
+						color: rgba($black, 0.4);
+
+						> img {
+							width: 25px;
+							height: 25px;
+							margin-right: 13px;
+						}
+					}
+
 					> p:last-child {
 						font-size: 14px;
 						opacity: 0.4;
+						line-height: 1.8;
+						letter-spacing: 1px;
 					}
 				}
 			}
@@ -127,6 +146,7 @@
 
 		> div ~ div {
 			display: flex;
+			margin-top: 30px;
 
 			> form {
 				margin-bottom: 0;
@@ -149,6 +169,31 @@
 			button {
 				padding: 20px 30px;
 				width: 154px;
+			}
+		}
+	}
+
+	&.replies {
+		flex-direction: column;
+		margin-top: 0;
+
+		> div {
+			margin: 30px 0 0;
+
+			> div {
+				> div:last-child {
+					> div:first-child {
+						> button:first-child {
+							margin-right: 0;
+						}
+					}
+
+					> div:last-child {
+						> button {
+							padding: 0;
+						}
+					}
+				}
 			}
 		}
 	}
