--- a/src/components/layout/comment/comment-item/commentItems.module.scss
+++ b/src/components/layout/comment/comment-item/commentItems.module.scss
@@ -1,4 +1,5 @@
 @import '@/assets/styles/variables';
+@import '@/assets/styles/mixins';
 
 .comments_wrapper {
 	> div:last-child {
@@ -6,189 +7,135 @@
 	}
 
 	> div {
-		position: relative;
-		padding-left: 91px;
 		margin-bottom: 50px;
 
-		> img {
-			margin-right: 30px;
-			cursor: pointer;
+		> div:first-child {
+			position: relative;
+			padding-left: 91px;
 
-			position: absolute;
-			top: 0;
-			left: 0;
-		}
+			> img {
+				margin-right: 30px;
+				cursor: pointer;
 
-		> div:first-of-type {
-			> div:first-child {
+				position: absolute;
+				top: 0;
+				left: 0;
+			}
+
+			> div {
 				> div {
-					display: flex;
-					align-items: center;
-					margin-bottom: 10px;
-
-					> p:first-child {
-						margin-right: 15px;
-						font-weight: 500;
-						color: $blue;
-						cursor: pointer;
-					}
-
 					> div {
 						display: flex;
 						align-items: center;
-						margin-right: 15px;
-						color: rgba($black, 0.4);
+						margin-bottom: 15px;
 
-						> img {
-							width: 25px;
-							height: 25px;
-							margin-right: 13px;
+						> p:first-child {
+							margin-right: 15px;
+							font-weight: 500;
+							color: $blue;
+							cursor: pointer;
+						}
+
+						> div {
+							display: flex;
+							align-items: center;
+							margin-right: 15px;
+							color: rgba($black, 0.4);
+
+							> img {
+								width: 25px;
+								height: 25px;
+								margin-right: 13px;
+							}
+						}
+
+						> p:last-child {
+							font-size: 14px;
+							opacity: 0.4;
+							line-height: 1.8;
+							letter-spacing: 1px;
 						}
 					}
 
-					> p:last-child {
-						font-size: 14px;
-						opacity: 0.4;
-						line-height: 1.8;
-						letter-spacing: 1px;
+					> P {
+						@media (max-width: 460px) {
+							font-size: 16px;
+						}
 					}
 				}
 			}
+		}
 
-			> div:last-child {
-				display: flex;
-				align-items: center;
-				margin-top: 15px;
+		> div:last-child:not(div.toolbar, div.replies) {
+			> form {
+				margin-top: 30px;
+				margin-bottom: 0;
 
-				> div:first-child {
-					> button:nth-child(2) {
-						margin-left: 19px;
+				> textarea {
+					max-width: 563px;
+
+					& ~ div {
+						> button {
+							padding: 20px 30px;
+							width: 100%;
+							max-width: 154px;
+						}
+
+						> button:last-child {
+							margin-left: 30px;
+						}
 					}
+				}
 
-					> button {
-						margin: 0;
-						padding: 5px 0 5px 34px;
-						color: rgba($black, 0.4);
-						background-color: transparent;
-						border: 0;
-						position: relative;
-						transition: color 0.3s ease-in-out;
+				> div:last-child {
+					right: 12%;
+				}
 
-						&:hover {
-							color: rgba($black, 0.7);
-						}
+				@media (max-width: 1410px) {
+					@include media-form;
+				}
+			}
+		}
 
-						&:hover img {
-							opacity: 1;
-						}
+		> div.replies {
+			margin-left: 91px;
 
-						> img {
-							width: 26px;
-							height: 25px;
-							margin: 0;
-							opacity: 0.5;
+			> div {
+				margin: 30px 0 0;
+			}
 
-							position: absolute;
-							top: 50%;
-							left: 0;
-							transform: translateY(-50%);
-							transition: opacity 0.3s ease-in-out;
+			@media (max-width: 700px) {
+				> div {
+					> div {
+						> img ~ div {
+							> div:first-child {
+								> div:first-child {
+									flex-wrap: wrap;
+									align-items: baseline;
 
-							&.fill_heart {
-								display: none;
-								opacity: 1;
+									> p ~ div {
+										order: 1;
+										width: 100%;
+										margin-top: 10px;
+									}
 
-								&.active {
-									display: block;
-
-									& ~ img {
-										display: none;
+									> p:last-child {
+										font-size: 12px;
 									}
 								}
 							}
 						}
 					}
 				}
+			}
 
-				> div:last-child {
-					display: flex;
-					align-items: center;
-					margin-left: 30px;
-
-					> button {
-						display: flex;
-						justify-content: center;
-						align-items: center;
-						width: 25px;
-						height: 25px;
-						background-color: rgba($black, 0.1);
-						border-radius: 50%;
-						font-weight: 500;
-						transition: background-color 0.3s ease-in-out;
-
-						&:hover {
-							background-color: rgba($black, 0.2);
-						}
-					}
-
-					> button:first-child {
-						color: $red;
-						margin-right: 10px;
-					}
-
-					> button:last-child {
-						color: $green;
-						margin-left: 10px;
-					}
-				}
+			@media (max-width: 460px) {
+				margin-left: 0;
 			}
 		}
 
-		> div ~ div {
-			display: flex;
-			margin-top: 30px;
-
-			> form {
-				margin-bottom: 0;
-				flex-grow: 1;
-
-				> div:last-child {
-					> p:last-child {
-						width: 154px;
-						text-align: center;
-					}
-				}
-			}
-
-			> button {
-				align-self: flex-start;
-				margin-top: 37px;
-				margin-left: 30px;
-			}
-
-			button {
-				padding: 20px 30px;
-				width: 154px;
-			}
-		}
-	}
-
-	&.replies {
-		flex-direction: column;
-		margin-top: 0;
-
-		> div {
-			margin: 30px 0 0;
-
-			> div {
-				> div:last-child {
-					> div:last-child {
-						> button {
-							padding: 0;
-						}
-					}
-				}
-			}
+		@media (max-width: 700px) {
+			margin-bottom: 70px;
 		}
 	}
 }
