--- a/src/components/layout/comment/comment-panel/commentPanel.module.scss
+++ b/src/components/layout/comment/comment-panel/commentPanel.module.scss
@@ -32,4 +32,30 @@
 			}
 		}
 	}
+
+	> div {
+		display: flex;
+		align-items: baseline;
+	}
+
+	@media (max-width: 770px) {
+		flex-wrap: wrap;
+
+		> div {
+			margin-top: 30px;
+			width: 100%;
+
+			> div {
+				margin-left: 0;
+			}
+
+			> button {
+				margin-left: 30px;
+			}
+		}
+	}
+
+	@media (max-width: 560px) {
+		margin-bottom: 20px;
+	}
 }
