--- a/src/components/layout/comment/comment-form/commentForm.module.scss
+++ b/src/components/layout/comment/comment-form/commentForm.module.scss
@@ -9,50 +9,21 @@
 	padding-left: 91px;
 	position: relative;
 
-	> textarea {
-		margin-right: 30px;
-
-		& ~ div:not(div:last-child) {
-			display: flex;
-			align-self: flex-start;
-			flex-grow: 1;
-		}
-	}
-
-	> div:last-child {
-		display: flex;
-
-		position: absolute;
-		top: 0;
-		right: 0;
-
-		font-size: 14px;
-		color: rgba($black, 0.4);
-		letter-spacing: 0.3px;
-
-		> p:first-child {
-			margin-right: 30px;
-			font-style: italic;
-		}
-
-		> p:last-child {
-			visibility: hidden;
-			color: $red;
-		}
+	> .button_wrapper {
+		align-self: flex-start;
 	}
 
 	@media (max-width: 970px) {
 		@include media-form;
 	}
 
-	@media (max-width: 560px) {
+	@media (max-width: 660px) {
 		flex-direction: column;
 		padding: 0;
 		align-items: flex-start;
 
 		> div:first-child {
 			align-items: center;
-			padding-bottom: 20px;
 
 			> img {
 				position: relative;
@@ -60,6 +31,20 @@
 
 			> p {
 				position: relative;
+			}
+		}
+
+		> div:last-child {
+			margin-top: 10px;
+		}
+	}
+
+	@media (max-width: 560px) {
+		> .button_wrapper {
+			width: 100%;
+
+			> button {
+				width: 100%;
 			}
 		}
 	}
