--- a/src/components/layout/comment/comment-panel/commentPanel.module.scss
+++ b/src/components/layout/comment/comment-panel/commentPanel.module.scss
@@ -35,6 +35,7 @@
 
 	> div {
 		display: flex;
+		flex-wrap: wrap;
 		align-items: baseline;
 	}
 
@@ -47,10 +48,11 @@
 
 			> div {
 				margin-left: 0;
+				margin-right: 30px;
 			}
 
 			> button {
-				margin-left: 30px;
+				margin-left: 0;
 			}
 		}
 	}
