--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -5,7 +5,7 @@
 	border-radius: 5px;
 	background-color: #abd873;
 
-	transition: all 0.4s ease-in-out;
+	transition: opacity 0.4s ease-in-out;
 
 	&:hover:not(&:disabled) {
 		opacity: 0.8;
