--- a/src/components/ui/field/field.module.scss
+++ b/src/components/ui/field/field.module.scss
@@ -1,5 +1,55 @@
 @import '@/assets/styles/variables';
 
+.textarea_field_validation_wrapper {
+	display: flex;
+	width: 100%;
+	margin-right: 30px;
+
+	> div:last-child {
+		display: flex;
+
+		position: absolute;
+		top: 0;
+		right: 0;
+
+		font-size: 14px;
+		color: rgba($black, 0.4);
+		letter-spacing: 0.3px;
+
+		> p:first-child {
+			margin-right: 30px;
+			font-style: italic;
+		}
+
+		> p:last-child {
+			visibility: hidden;
+			color: $red;
+		}
+	}
+
+	@media (max-width: 660px) {
+		padding: 30px 0;
+		position: relative;
+
+		> div:last-child {
+			position: static;
+
+			> p:first-child {
+				margin-left: 0;
+				position: absolute;
+				top: 0;
+				right: 0;
+			}
+
+			> p:last-child {
+				position: absolute;
+				bottom: 0;
+				left: 0;
+			}
+		}
+	}
+}
+
 .field {
 	width: 100%;
 	max-width: 688px;
@@ -17,5 +67,13 @@
 
 	&::placeholder {
 		opacity: 0.4;
+
+		@media (max-width: 350px) {
+			font-size: 14px;
+		}
+	}
+
+	@media (max-width: 460px) {
+		font-size: 16px;
 	}
 }
