--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -87,6 +87,9 @@ video {
 	vertical-align: baseline;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
+	-webkit-text-size-adjust: none;
+	-moz-text-size-adjust: none;
+	-ms-text-size-adjust: none;
 	text-size-adjust: none;
 }
 
