--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -4,7 +4,13 @@
 *,
 *::before,
 *:after {
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+}
+
+html,
+body {
+	height: 100%;
 }
 
 body {
