--- a/src/components/layout/comment/comment-form/commentForm.module.scss
+++ b/src/components/layout/comment/comment-form/commentForm.module.scss
@@ -2,7 +2,11 @@
 @import '@/assets/styles/mixins';
 
 .form {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	margin-bottom: 40px;
 	padding-top: 37px;
@@ -10,6 +14,7 @@
 	position: relative;
 
 	> .button_wrapper {
+		-ms-flex-item-align: start;
 		align-self: flex-start;
 	}
 
@@ -18,11 +23,18 @@
 	}
 
 	@media (max-width: 730px) {
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
 		flex-direction: column;
 		padding: 0;
+		-webkit-box-align: start;
+		-ms-flex-align: start;
 		align-items: flex-start;
 
 		> div:first-child {
+			-webkit-box-align: center;
+			-ms-flex-align: center;
 			align-items: center;
 
 			> img {
