--- a/src/components/layout/comment/comment-item/commentItems.module.scss
+++ b/src/components/layout/comment/comment-item/commentItems.module.scss
@@ -23,8 +23,13 @@
 			}
 
 			> div {
+				display: -webkit-box;
+				display: -ms-flexbox;
 				display: flex;
+				-webkit-box-align: center;
+				-ms-flex-align: center;
 				align-items: center;
+				-ms-flex-item-align: start;
 				align-self: flex-start;
 
 				> p:first-child {
@@ -35,7 +40,11 @@
 				}
 
 				> div {
+					display: -webkit-box;
+					display: -ms-flexbox;
 					display: flex;
+					-webkit-box-align: center;
+					-ms-flex-align: center;
 					align-items: center;
 					margin-right: 15px;
 					color: rgba($black, 0.4);
@@ -77,6 +86,8 @@
 				}
 
 				> div:last-child {
+					display: -webkit-box;
+					display: -ms-flexbox;
 					display: flex;
 
 					> button {
@@ -101,6 +112,9 @@
 
 				@media (max-width: 560px) {
 					> div:last-child {
+						-webkit-box-orient: vertical;
+						-webkit-box-direction: normal;
+						-ms-flex-direction: column;
 						flex-direction: column;
 
 						> button {
@@ -133,10 +147,15 @@
 
 			> div:first-child {
 				> div {
+					-ms-flex-wrap: wrap;
 					flex-wrap: wrap;
+					-webkit-box-align: baseline;
+					-ms-flex-align: baseline;
 					align-items: baseline;
 
 					> p ~ div {
+						-webkit-box-ordinal-group: 2;
+						-ms-flex-order: 1;
 						order: 1;
 						width: 100%;
 						margin-top: 10px;
@@ -147,6 +166,8 @@
 
 		@media (max-width: 560px) {
 			> div:first-child {
+				display: -webkit-box;
+				display: -ms-flexbox;
 				display: flex;
 				position: static;
 				padding-left: 0;
@@ -156,7 +177,10 @@
 				}
 
 				> div {
+					-ms-flex-item-align: center;
+					-ms-grid-row-align: center;
 					align-self: center;
+					-ms-flex-wrap: wrap;
 					flex-wrap: wrap;
 				}
 			}
