--- a/src/components/layout/main/main.module.scss
+++ b/src/components/layout/main/main.module.scss
@@ -1,6 +1,8 @@
 @import '@/assets/styles/variables';
 
 .main {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 
 	> aside {
@@ -15,7 +17,10 @@
 		padding: 0 129px 0 86px;
 
 		section:first-child {
+			display: -webkit-box;
+			display: -ms-flexbox;
 			display: flex;
+			-ms-flex-wrap: wrap;
 			flex-wrap: wrap;
 			width: 100%;
 
@@ -55,7 +60,15 @@
 			display: none;
 		}
 
+		-webkit-box-orient: vertical;
+
+		-webkit-box-direction: normal;
+
+		-ms-flex-direction: column;
+
 		flex-direction: column;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 	}
 }
