--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -6,6 +6,10 @@
 	border-radius: 5px;
 	background-color: #abd873;
 
+	-webkit-transition: opacity 0.4s ease-in-out;
+
+	-o-transition: opacity 0.4s ease-in-out;
+
 	transition: opacity 0.4s ease-in-out;
 
 	&:hover:not(&:disabled) {
