--- a/src/components/ui/favorite/favorite.module.scss
+++ b/src/components/ui/favorite/favorite.module.scss
@@ -1,17 +1,27 @@
 @import '@/assets/styles/variables';
 
 .favorite {
+	display: -webkit-inline-box;
+	display: -ms-inline-flexbox;
 	display: inline-flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	margin-left: 50px;
 	background-color: transparent;
 	opacity: 0.7;
+	-webkit-transition: opacity 0.2s ease;
+	-o-transition: opacity 0.2s ease;
 	transition: opacity 0.2s ease;
 
 	> span {
 		margin-right: 10px;
 		font-size: 16px;
 		opacity: 0.6;
+
+		-webkit-transition: all 0.2s ease;
+
+		-o-transition: all 0.2s ease;
 
 		transition: all 0.2s ease;
 	}
