--- a/src/components/ui/select/select.module.scss
+++ b/src/components/ui/select/select.module.scss
@@ -4,7 +4,11 @@
 	margin-left: 55px;
 	position: relative;
 	> .name {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 		background-color: transparent;
 		margin-bottom: 15px;
@@ -13,6 +17,8 @@
 			font-size: 16px;
 			opacity: 0.4;
 			border-bottom: 1px solid $black;
+			-webkit-transition: opacity 0.2s ease;
+			-o-transition: opacity 0.2s ease;
 			transition: opacity 0.2s ease;
 		}
 
@@ -26,10 +32,13 @@
 			border-radius: 0;
 			margin-left: 10px;
 			margin-top: 5px;
+			-webkit-animation: rotate-second-half 0.4s ease-in-out;
 			animation: rotate-second-half 0.4s ease-in-out;
 
 			&.active {
+				-webkit-animation: rotate-first-half 0.4s ease-in-out;
 				animation: rotate-first-half 0.4s ease-in-out;
+				-webkit-animation-fill-mode: both;
 				animation-fill-mode: both;
 			}
 		}
@@ -37,9 +46,12 @@
 
 	> ul {
 		display: none;
+		width: -webkit-max-content;
+		width: -moz-max-content;
 		width: max-content;
 
 		background-color: $white;
+		-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 		border-radius: 5px;
 
@@ -53,6 +65,8 @@
 		}
 
 		> li {
+			-webkit-transition: background-color 0.2s ease;
+			-o-transition: background-color 0.2s ease;
 			transition: background-color 0.2s ease;
 			position: relative;
 
@@ -69,7 +83,11 @@
 			}
 
 			> a {
+				display: -webkit-inline-box;
+				display: -ms-inline-flexbox;
 				display: inline-flex;
+				-webkit-box-align: center;
+				-ms-flex-align: center;
 				align-items: center;
 				width: 100%;
 				padding: 5px 31px 5px 0;
@@ -77,6 +95,8 @@
 				font-size: 16px;
 				color: rgba($black, 0.4);
 				text-decoration: none;
+				-webkit-transition: color 0.2s ease;
+				-o-transition: color 0.2s ease;
 				transition: color 0.2s ease;
 				cursor: pointer;
 
@@ -95,22 +115,50 @@
 	}
 }
 
-@keyframes rotate-first-half {
+@-webkit-keyframes rotate-first-half {
 	from {
+		-webkit-transform: rotate(0);
 		transform: rotate(0);
 	}
 
 	to {
+		-webkit-transform: rotate(180deg);
 		transform: rotate(180deg);
+	}
+}
+
+@keyframes rotate-first-half {
+	from {
+		-webkit-transform: rotate(0);
+		transform: rotate(0);
+	}
+
+	to {
+		-webkit-transform: rotate(180deg);
+		transform: rotate(180deg);
+	}
+}
+
+@-webkit-keyframes rotate-second-half {
+	from {
+		-webkit-transform: rotate(180deg);
+		transform: rotate(180deg);
+	}
+
+	to {
+		-webkit-transform: rotate(360deg);
+		transform: rotate(360deg);
 	}
 }
 
 @keyframes rotate-second-half {
 	from {
+		-webkit-transform: rotate(180deg);
 		transform: rotate(180deg);
 	}
 
 	to {
+		-webkit-transform: rotate(360deg);
 		transform: rotate(360deg);
 	}
 }
