--- a/src/components/layout/comment/comment-item/commentItems.module.scss
+++ b/src/components/layout/comment/comment-item/commentItems.module.scss
@@ -198,3 +198,21 @@
 		}
 	}
 }
+
+.load {
+	> div {
+		animation: transformComments 1.4s ease-in-out;
+	}
+}
+
+@keyframes transformComments {
+	from {
+		transform: translateX(-200px);
+	}
+	50% {
+		transform: translateX(100px);
+	}
+	to {
+		transform: translateX(0px);
+	}
+}
